@@ -1,3 +1,10 @@
+2009-10-21  Tobias C. Rittweiler <tcr@freebits.de>
+
+	Make M-x slime-changelog-date work.
+
+	* slime.el (slime-changelog-date): Make the function be callable
+	interactively.
+
 2009-10-21  Stas Boukarev  <stassats@gmail.com>
 
 	* doc/slime.texi (ASDF): Document new commands.
